# librarymanaging

./: BookInfo.h  CMakeLists.txt  LogIn.ui  README.md  book.cpp  book.h  borrowrecord.cpp  borrowrecord.h  control1.cpp  control1.h  control1.ui  control2.cpp  control2.h  control2.ui  form.ui  globals.h  library.cpp  library.h  login.cpp  login.h  login.ui  main.cpp  main.ui  query.cpp  querythread.h  reader.cpp  reader.h  recommended.cpp  recommended.h  recommended.ui  recouse.qrc  registering.cpp  registering.h  registering.ui  search.cpp  search.h  search.ui
